force-app/main/default/objects/BLN_Corporate__c/BLN_Corporate__c.object-meta.xml
<CustomObject>
    <description>FOUK-6065, 5754, This Custom Object is created for storing information about Corporate</description>
    <label>Corporate</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Corporate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>