force-app/main/default/objects/BLN_Corporate__c/fields/BLN_ADASExcess__c.field-meta.xml
<CustomField>
    <fullName>BLN_ADASExcess__c</fullName>
    <description>FOUK - 4923</description>
    <label>Recalibration Excess</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>