force-app/main/default/objects/BLN_Corporate__c/fields/BLN_AdditionalDrivers__c.field-meta.xml
<CustomField>
    <fullName>BLN_AdditionalDrivers__c</fullName>
    <description>FOUK-6065, 5754, This Custom field is created for storing information about Additional Drivers</description>
    <label>Additional Drivers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>