force-app/main/default/objects/BLN_Corporate__c/fields/BLN_AmountAuthorizationRequired__c.field-meta.xml
<CustomField>
    <fullName>BLN_AmountAuthorizationRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-7082</description>
    <label>Amount Authorisation Required</label>
    <type>Checkbox</type>
</CustomField>