force-app/main/default/objects/BLN_Corporate__c/fields/BLN_AmountAuthorizationRequiredTrade__c.field-meta.xml
<CustomField>
    <fullName>BLN_AmountAuthorizationRequiredTrade__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-10503</description>
    <label>Amount Authorisation Required</label>
    <type>Checkbox</type>
</CustomField>