force-app/main/default/objects/BLN_Corporate__c/fields/BLN_AmountAuthorizedTrade__c.field-meta.xml
<CustomField>
    <fullName>BLN_AmountAuthorizedTrade__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FOUK-10503</description>
    <label>Amount Authorised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>