force-app/main/default/objects/BLN_Corporate__c/fields/BLN_ApprovedLimit__c.field-meta.xml
<CustomField>
    <fullName>BLN_ApprovedLimit__c</fullName>
    <description>FOUk-7184 This is used in BLN_PopulateApprovedLimit flow</description>
    <label>Approved Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>