force-app/main/default/objects/BLN_Corporate__c/fields/BLN_AuthorisationCodeName__c.field-meta.xml
<CustomField>
    <fullName>BLN_AuthorisationCodeName__c</fullName>
    <description>FOUK-5023  storing authorisation code</description>
    <label>Authorisation Code/Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>