force-app/main/default/objects/BLN_Corporate__c/fields/BLN_AuthorisationReason__c.field-meta.xml
<CustomField>
    <fullName>BLN_AuthorisationReason__c</fullName>
    <description>FOUK-5023 storing authorisation reason</description>
    <label>Authorisation Reason</label>
    <type>TextArea</type>
</CustomField>