force-app/main/default/objects/BLN_Corporate__c/fields/BLN_AuthorisationReasonTrade__c.field-meta.xml
<CustomField>
    <fullName>BLN_AuthorisationReasonTrade__c</fullName>
    <description>FOUK-10503</description>
    <label>Authorisation Reason</label>
    <type>TextArea</type>
</CustomField>