force-app/main/default/objects/BLN_Corporate__c/fields/BLN_AuthorizationStatus__c.field-meta.xml
<CustomField>
    <fullName>BLN_AuthorizationStatus__c</fullName>
    <description>FOUK - 3167</description>
    <label>Authorisation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authorization Required</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>