force-app/main/default/objects/BLN_Corporate__c/fields/BLN_BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BLN_BillingAddress__c</fullName>
    <label>Billing Address</label>
    <type>Address</type>
</CustomField>