force-app/main/default/objects/BLN_Corporate__c/fields/BLN_BodyGlassExcess__c.field-meta.xml
<CustomField>
    <fullName>BLN_BodyGlassExcess__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FOUK - 4923</description>
    <label>Bodyglass Excess Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>