force-app/main/default/objects/BLN_Corporate__c/fields/BLN_BVTStatus__c.field-meta.xml
<CustomField>
    <fullName>BLN_BVTStatus__c</fullName>
    <description>FOUK-5584: This field is created to store BVT status values.</description>
    <label>BVT Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready to Send</fullName>
            </value>
            <value>
                <fullName>Awaiting Response</fullName>
            </value>
            <value>
                <fullName>Imported</fullName>
            </value>
            <value>
                <fullName>Ready for Review</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Validation Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>