force-app/main/default/objects/BLN_Corporate__c/fields/BLN_CHFVATStatus__c.field-meta.xml
<CustomField>
    <fullName>BLN_CHFVATStatus__c</fullName>
    <description>FOUK-5023 :  storing CHF VaT status</description>
    <label>DA/Non DA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rated</fullName>
                <label>Non DA</label>
            </value>
            <value>
                <fullName>Exempt</fullName>
                <label>DA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>