force-app/main/default/objects/BLN_Corporate__c/fields/BLN_CommercialFlag__c.field-meta.xml
<CustomField>
    <fullName>BLN_CommercialFlag__c</fullName>
    <description>FOUK:5754 - This fields is created to store the Commercial Flag data</description>
    <label>Commercial Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>