force-app/main/default/objects/BLN_Corporate__c/fields/BLN_CorporateCountryGrouping__c.field-meta.xml
<CustomField>
    <fullName>BLN_CorporateCountryGrouping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is used to store Corporate Country</description>
    <label>Corporate Country Grouping</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporates (Corporate Country Grouping)</relationshipLabel>
    <relationshipName>Corporates6</relationshipName>
    <type>Lookup</type>
</CustomField>