force-app/main/default/objects/BLN_Corporate__c/fields/BLN_CorporateLegalEntity__c.field-meta.xml
<CustomField>
    <fullName>BLN_CorporateLegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK:5754, 6065 - This Custom field is created for storing information about Insurance Policies.</description>
    <label>Corporate Legal Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporates (Corporate Legal Entity)</relationshipLabel>
    <relationshipName>Corporates5</relationshipName>
    <type>Lookup</type>
</CustomField>