force-app/main/default/objects/BLN_Corporate__c/fields/BLN_CorporateOperatingCompanyName__c.field-meta.xml
<CustomField>
    <fullName>BLN_CorporateOperatingCompanyName__c</fullName>
    <description>FOUK-6065, 5754, This Custom field is created for storing information about Corporate Operating Company Name</description>
    <label>Corporate Operating Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>