force-app/main/default/objects/BLN_Corporate__c/fields/BLN_CorporateOperatingCompanyPostcode__c.field-meta.xml
<CustomField>
    <fullName>BLN_CorporateOperatingCompanyPostcode__c</fullName>
    <description>FOUK-6065, 5754, This Custom field is created for storing information about Corporate Operating Company Postcode</description>
    <label>Corporate Operating Company Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>