force-app/main/default/objects/BLN_Corporate__c/fields/BLN_CorporateSite__c.field-meta.xml
<CustomField>
    <fullName>BLN_CorporateSite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-6065, 5754, This Custom field is created for storing information about Insurance Policies.</description>
    <label>Corporate Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporates (Corporate Site Name)</relationshipLabel>
    <relationshipName>Corporates3</relationshipName>
    <type>Lookup</type>
</CustomField>