force-app/main/default/objects/BLN_Corporate__c/fields/BLN_CustomerId__c.field-meta.xml
<CustomField>
    <fullName>BLN_CustomerId__c</fullName>
    <description>FOUK-10588 Captures the customer ID received from EBS in case of debtor</description>
    <label>Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>