force-app/main/default/objects/BLN_Corporate__c/fields/BLN_CustomerSiteId__c.field-meta.xml
<CustomField>
    <fullName>BLN_CustomerSiteId__c</fullName>
    <description>FOUK-10588 Captures the customer site ID received from EBS in case of debtor</description>
    <label>Customer Site Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>