force-app/main/default/objects/BLN_Corporate__c/fields/BLN_DebtorFlag__c.field-meta.xml
<CustomField>
    <fullName>BLN_DebtorFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-10588 Captures the debtor flag received from EBS in case of debtor</description>
    <label>Debtor Flag</label>
    <type>Checkbox</type>
</CustomField>