force-app/main/default/objects/BLN_Corporate__c/fields/BLN_FailureComment__c.field-meta.xml
<CustomField>
    <fullName>BLN_FailureComment__c</fullName>
    <description>Created as a part of FOUK-7649</description>
    <label>Failure Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>