force-app/main/default/objects/BLN_Corporate__c/fields/BLN_FirstName__c.field-meta.xml
<CustomField>
    <fullName>BLN_FirstName__c</fullName>
    <description>FOUK-5754, 6065 : This field is created to store FirstName</description>
    <label>FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>