force-app/main/default/objects/BLN_Corporate__c/fields/BLN_GlassCoverFlag__c.field-meta.xml
<CustomField>
    <fullName>BLN_GlassCoverFlag__c</fullName>
    <description>FOUK-6065, 5754, This Custom field is created for storing information about Glass Cover Flag</description>
    <label>Glass Cover Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>