force-app/main/default/objects/BLN_Corporate__c/fields/BLN_HeatedRearExcess__c.field-meta.xml
<CustomField>
    <fullName>BLN_HeatedRearExcess__c</fullName>
    <description>FOUK - 4923</description>
    <label>Heated Rear Windscreen Excess</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>