force-app/main/default/objects/BLN_Corporate__c/fields/BLN_InsuranceCountryGrouping__c.field-meta.xml
<CustomField>
    <fullName>BLN_InsuranceCountryGrouping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is Used to store Insurance Country Grouping</description>
    <label>Insurance Country Grouping</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporates (Insurance Country Grouping)</relationshipLabel>
    <relationshipName>Corporates4</relationshipName>
    <type>Lookup</type>
</CustomField>