force-app/main/default/objects/BLN_Corporate__c/fields/BLN_InsuranceLegalEntity__c.field-meta.xml
<CustomField>
    <fullName>BLN_InsuranceLegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as part of FOUK-9106 and FOUK-9108</description>
    <label>Insurance Legal Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporate(Insurance Legal Entity)</relationshipLabel>
    <relationshipName>Corporates7</relationshipName>
    <type>Lookup</type>
</CustomField>