force-app/main/default/objects/BLN_Corporate__c/fields/BLN_InsurancePolicyCoverageType__c.field-meta.xml
<CustomField>
    <fullName>BLN_InsurancePolicyCoverageType__c</fullName>
    <description>FOUK-6065, 5754, This Custom field is created for storing information about Insurance Policies.</description>
    <label>Insurance Policy Coverage Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>