force-app/main/default/objects/BLN_Corporate__c/fields/BLN_InsuranceSite__c.field-meta.xml
<CustomField>
    <fullName>BLN_InsuranceSite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FOUK-6065, 5754, This Custom field is created for storing information about Insurance Policies.</description>
    <label>Insurance Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporates (Insurance Site Name)</relationshipLabel>
    <relationshipName>Corporates2</relationshipName>
    <type>Lookup</type>
</CustomField>