force-app/main/default/objects/BLN_Corporate__c/fields/BLN_IsPolicyValid__c.field-meta.xml
<CustomField>
    <fullName>BLN_IsPolicyValid__c</fullName>
    <description>FOUK-6065, 5754, This Custom field is created for storing information about Insurance Policies.</description>
    <label>Is Policy Valid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>