force-app/main/default/objects/BLN_Corporate__c/fields/BLN_KnownAs__c.field-meta.xml
<CustomField>
    <fullName>BLN_KnownAs__c</fullName>
    <description>FOUK-8621 This field is created for Known As</description>
    <label>Known As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>