force-app/main/default/objects/BLN_Corporate__c/fields/BLN_LastName__c.field-meta.xml
<CustomField>
    <fullName>BLN_LastName__c</fullName>
    <description>FOUK-5754, 6065: This field is created to store LastName</description>
    <label>LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>