force-app/main/default/objects/BLN_Corporate__c/fields/BLN_LegacyCorporateId__c.field-meta.xml
<CustomField>
    <fullName>BLN_LegacyCorporateId__c</fullName>
    <description>R2DM-290 - Created for data migration.</description>
    <externalId>true</externalId>
    <label>Legacy Corporate Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>