force-app/main/default/objects/BLN_Corporate__c/fields/BLN_MiddleName__c.field-meta.xml
<CustomField>
    <fullName>BLN_MiddleName__c</fullName>
    <description>FOUK-5754, 6065: This field is created to store MiddleName</description>
    <label>MiddleName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>