force-app/main/default/objects/BLN_Corporate__c/fields/BLN_OEAuthorizationRequired__c.field-meta.xml
<CustomField>
    <fullName>BLN_OEAuthorizationRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK - 3167</description>
    <label>OE Authorisation Required</label>
    <type>Checkbox</type>
</CustomField>