force-app/main/default/objects/BLN_Corporate__c/fields/BLN_OEAuthorizationRequiredTrade__c.field-meta.xml
<CustomField>
    <fullName>BLN_OEAuthorizationRequiredTrade__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-10503</description>
    <label>OE Authorisation Required</label>
    <type>Checkbox</type>
</CustomField>