force-app/main/default/objects/BLN_Corporate__c/fields/BLN_OEAuthorized__c.field-meta.xml
<CustomField>
    <fullName>BLN_OEAuthorized__c</fullName>
    <description>FOUK - 3167</description>
    <label>OE Authorised</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>