force-app/main/default/objects/BLN_Corporate__c/fields/BLN_Origin__c.field-meta.xml
<CustomField>
    <fullName>BLN_Origin__c</fullName>
    <description>FOUK-5754, 6065: This field is created to store origin values.</description>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDS</fullName>
            </value>
            <value>
                <fullName>Direct API</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>