force-app/main/default/objects/BLN_Corporate__c/fields/BLN_PolicyConfirmation__c.field-meta.xml
<CustomField>
    <fullName>BLN_PolicyConfirmation__c</fullName>
    <description>FOUK-6065, 5754, This Custom field is created for storing information about Insurance Policies.</description>
    <label>Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>