force-app/main/default/objects/BLN_Corporate__c/fields/BLN_PolicyHolderName__c.field-meta.xml
<CustomField>
    <fullName>BLN_PolicyHolderName__c</fullName>
    <description>FOUK-5754, 6065: This field is created to store Account value.</description>
    <formula>BLN_Salutation__c  + &apos; &apos; +  BLN_FirstName__c  + &apos; &apos; +  BLN_MiddleName__c   + &apos; &apos; + BLN_LastName__c</formula>
    <label>Policy Holder</label>
    <type>Text</type>
</CustomField>