force-app/main/default/objects/BLN_Corporate__c/fields/BLN_PolicyLimit__c.field-meta.xml
<CustomField>
    <fullName>BLN_PolicyLimit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FOUK-10644, created as part of FOUK-10644.</description>
    <label>Policy Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>