force-app/main/default/objects/BLN_Corporate__c/fields/BLN_PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>BLN_PolicyNumber__c</fullName>
    <description>FOUK-6065, 5754, This Custom field is created for storing information about Insurance Policies.</description>
    <label>Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>