force-app/main/default/objects/BLN_Corporate__c/fields/BLN_PolicyStartDate__c.field-meta.xml
<CustomField>
    <fullName>BLN_PolicyStartDate__c</fullName>
    <description>FOUK-6065, 5754, This Custom field is created for storing information about Insurance Policies.</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>