force-app/main/default/objects/BLN_Corporate__c/fields/BLN_PolicyTypeCode__c.field-meta.xml
<CustomField>
    <fullName>BLN_PolicyTypeCode__c</fullName>
    <description>FOUK-6065, 5754, This Custom field is created for storing information about Policy Type Codes</description>
    <label>Policy Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>