force-app/main/default/objects/BLN_Corporate__c/fields/BLN_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>BLN_PostalCode__c</fullName>
    <description>Created as part of FOUK-9106 and FOUK-9108</description>
    <label>PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>