force-app/main/default/objects/BLN_Corporate__c/fields/BLN_ProductAuthorisationRequiredTrade__c.field-meta.xml
<CustomField>
    <fullName>BLN_ProductAuthorisationRequiredTrade__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK - 10561</description>
    <label>Product Authorisation Required</label>
    <type>Checkbox</type>
</CustomField>