force-app/main/default/objects/BLN_Corporate__c/fields/BLN_ProductAuthorised__c.field-meta.xml
<CustomField>
    <fullName>BLN_ProductAuthorised__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-5023</description>
    <label>Product Authorised</label>
    <type>Checkbox</type>
</CustomField>