force-app/main/default/objects/BLN_Corporate__c/fields/BLN_ProductAuthorisedTrade__c.field-meta.xml
<CustomField>
    <fullName>BLN_ProductAuthorisedTrade__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-10503</description>
    <label>Product Authorised</label>
    <type>Checkbox</type>
</CustomField>