force-app/main/default/objects/BLN_Corporate__c/fields/BLN_RearWindscreenExcess__c.field-meta.xml
<CustomField>
    <fullName>BLN_RearWindscreenExcess__c</fullName>
    <description>Dummy Filed Created after Discussion with POs . Will be changed in Future
Part of FOUK-8372 US</description>
    <label>Rear Windscreen Excess</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>