force-app/main/default/objects/BLN_Corporate__c/fields/BLN_Reference__c.field-meta.xml
<CustomField>
    <fullName>BLN_Reference__c</fullName>
    <description>This field is created as part of story FOUK-8524</description>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>