force-app/main/default/objects/BLN_Corporate__c/fields/BLN_RemainderPayingPartyType__c.field-meta.xml
<CustomField>
    <fullName>BLN_RemainderPayingPartyType__c</fullName>
    <description>Field added as part of FOUK-9106 and FOUK-9108</description>
    <label>Remainder Paying Party Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Insurer</fullName>
            </value>
            <value>
                <fullName>Motorist</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>