force-app/main/default/objects/BLN_Corporate__c/fields/BLN_RemedyJobID__c.field-meta.xml
<CustomField>
    <fullName>BLN_RemedyJobID__c</fullName>
    <label>Remedy Job ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>