force-app/main/default/objects/BLN_Corporate__c/fields/BLN_RepairCoverFlag__c.field-meta.xml
<CustomField>
    <fullName>BLN_RepairCoverFlag__c</fullName>
    <description>Created as part of PDS story FOUK-9106 and FOUK-9108</description>
    <label>RepairCoverFlag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>