force-app/main/default/objects/BLN_Corporate__c/fields/BLN_RepairExcess__c.field-meta.xml
<CustomField>
    <fullName>BLN_RepairExcess__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FOUK-6065, 5754, This Custom field is created for storing information about  Glass Repair Excess Amount</description>
    <label>Glass Repair Excess Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>