force-app/main/default/objects/BLN_Corporate__c/fields/BLN_Salutation__c.field-meta.xml
<CustomField>
    <fullName>BLN_Salutation__c</fullName>
    <description>FOUK-5754, 6065 : This field is created to store Salutation.</description>
    <label>Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>