force-app/main/default/objects/BLN_Corporate__c/fields/BLN_SchemeCode__c.field-meta.xml
<CustomField>
    <fullName>BLN_SchemeCode__c</fullName>
    <description>FOUK-6065, 5754, This Custom field is created for storing information about Scheme Codes.</description>
    <label>Scheme Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>