force-app/main/default/objects/BLN_Corporate__c/fields/BLN_SiteUseId__c.field-meta.xml
<CustomField>
    <fullName>BLN_SiteUseId__c</fullName>
    <description>FOUK-10588 Captures the Site Use ID received from EBS in case of debtor</description>
    <label>Site Use Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>