force-app/main/default/objects/BLN_Corporate__c/fields/BLN_ValidationDate__c.field-meta.xml
<CustomField>
    <fullName>BLN_ValidationDate__c</fullName>
    <description>Created as a part of FOUK-7649</description>
    <label>Validation date</label>
    <type>DateTime</type>
</CustomField>