force-app/main/default/objects/BLN_Corporate__c/fields/BLN_ValueAuthorisedReauthorised__c.field-meta.xml
<CustomField>
    <fullName>BLN_ValueAuthorisedReauthorised__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FOUK-7082</description>
    <label>Value Authorised/Reauthorised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>