force-app/main/default/objects/BLN_Corporate__c/fields/BLN_ValueAuthorizedReAuthorisedTrade__c.field-meta.xml
<CustomField>
    <fullName>BLN_ValueAuthorizedReAuthorisedTrade__c</fullName>
    <description>FOUK-10503</description>
    <label>Value Authorised/Reauthorised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>