force-app/main/default/objects/BLN_Corporate__c/fields/BLN_VATPayingPartyType__c.field-meta.xml
<CustomField>
    <fullName>BLN_VATPayingPartyType__c</fullName>
    <description>FOUK-9123, This Field is created related to &quot;PDS - Split Billing VAT Status&quot;</description>
    <label>VAT Paying Party Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Insurer</fullName>
            </value>
            <value>
                <fullName>Motorist</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>